# newscorpus

./: .env.example  .gitignore  CHANGELOG.md  HOWTOs.md  README.md  config.cfg  db_backup.sh  db_restore.sh  docker-compose.debug.yml  docker-compose.yml  notebook.ipynb  pyproject.toml  sources.example.json
.devcontainer/: devcontainer.json  docker-compose.yml
crawler/: .pylintrc  Dockerfile  crawl.sh  requirements.txt
crawler/app/: __main__.py  config.py  logger.py  sources.json
crawler/app/assets/: german_stopwords_full.txt  german_stopwords_plain.txt
crawler/app/crawler/: __init__.py  random_user_agent.py
crawler/app/database/: create_client.py  remove_duplicates.py
crawler/app/util/: __init__.py
newscorpus/: __init__.py  __main__.py  config.py  logger.py  main.py  scraper.py  sources.py
newscorpus/database/: __init__.py  migration_scripts.py
newscorpus/scraper/: __init__.py
newscorpus/sources/: __init__.py  sources.json
